--- a/SKShoeAndSports.DataAccess/SKShoeAndSports.DataAccess.csproj
+++ b/SKShoeAndSports.DataAccess/SKShoeAndSports.DataAccess.csproj
@@ -25,6 +25,10 @@
     <Compile Remove="Migrations\20200730160029_AlteredProductVariantModelProductIdNotNullable.Designer.cs" />
     <Compile Remove="Migrations\20200730194928_AlteredBasketModel.cs" />
     <Compile Remove="Migrations\20200730194928_AlteredBasketModel.Designer.cs" />
+    <Compile Remove="Migrations\20200901012432_NewMigration.cs" />
+    <Compile Remove="Migrations\20200901012432_NewMigration.Designer.cs" />
+    <Compile Remove="Migrations\20200901013206_NewMigration.cs" />
+    <Compile Remove="Migrations\20200901013206_NewMigration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
